# ebookai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_client.py
app/: client.py  graph.py  main.py  pdf_utils.py  proposals.py  state.py  tools.py  ui.py
app/agents/: __init__.py  architect.py  manager.py  researcher.py  verifier.py  writer.py
