[project]
name = "ebookai"
version = "0.1.0"
description = "Multi-agent ebook generation system"
authors = [
    {name = "wiesik4040@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "langgraph (>=1.2.1,<2.0.0)",
    "google-genai (>=2.6.0,<3.0.0)",
    "pydantic (>=2.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "streamlit (>=1.57.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
